<resources>
    <string name="app_name">LODORE</string>
    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>


    <string name="home_header_one">عطرك , بصمتك الخاصة</string>
    <string name="home_header_two">نأخزك هنافي رحلة للكتشاف</string>
    <string name="home_header_three">لعطر الأنسب لك أنت!</string>


    <string name="login_name">تسجيل الدخول</string>
    <string name="abt_us_txt1">اسمي براديب أنا الهندي</string>
    <string name="abt_us_txt2">تم تشخيص  اشانتيمع سرطان الثدي وتطوير عضلة
        القلب الناجم عن العلاج
        الكيماوي، مما يمكن
        أن يؤدي إلى فشل القلب
        الاحتقاني. حصلت على جهاز
        القلب لمساعدتها على
        التعامل مع حالتها.
        الجهاز والأدوية قلبها قد
تحسنت بشكل ملحوظ نوعية حياتها.  </string>

    <string name="blogtxt">القلب الناجم عن العلاج
                        الكيماوي، مما يمكن
                     أن يؤدي إلى فشل القلب
 </string>

    <string name="contact_us">تصل بنا</string>

    <string name="yes">Contuning Shopping</string>
    <string name="no"> Confirm Order</string>

    <string name="item">بند</string>
    <string name="quantity">كمية</string>
    <string name="price">السعر</string>
    <string name="header"> والأفريقية، لكتابة العديد من اللغات الآسيوية والأفريقية</string>
    <string name="start_journey">ابدأ الرحلة</string>
    <string name="fragnance_familess">تعرف على عوائل العطر</string>
    <string name="suggested_perfume">عطور مختارة منا هزه العائلة</string>
    <string name="home">الرئيسية</string>
    <string name="perfumes">العطور</string>
    <string name="fragnance_familes">دور العطور</string>
    <string name="my_about_us">من نحن</string>
    <string name="my_account">حسابي</string>
    <string name="blog">المـدونة</string>
    <string name="send_gift">أرسال هدية</string>
    <string name="shippinganddelivery">معلومات الشحن والتوصيل</string>
    <string name="faq">أسئلة الخصوصية</string>
    <string name="privacy_policy">سياسة الخصوصية</string>
    <string name="prouct_found">تم العثور على  نتائج</string>
    <string name="perfume_houses">دور العطور</string>
    <string name="sort_by">الترتيب بحسب</string>
    <string name="show_all">عرض الكل</string>
    <string name="catagory">عناصر الفرز</string>
    <string name="email">البريد اﻹلكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="price_high_to_low"><![CDATA[السعر (منخفض > صرتفع)]]></string>
    <string name="perfume_type">نوع العطر</string>
    <string name="cool">هادئ</string>
    <string name="warm">دافئ</string>
    <string name="select_all">اختيار الكل</string>
    <string name="occasion">المناسبة</string>
    <string name="morning">صباحي</string>
    <string name="night">مسائي</string>
    <string name="daily">يومي</string>
    <string name="selectall">اختيار الكل</string>
    <string name="perfume_family">العائلة العطرية</string>
    <string name="amber">شرقي (عنبدر)</string>
    <string name="oud">شرقي (عود)</string>
    <string name="wood">أخشاب عطرية</string>
    <string name="spices">شرقي(توابل)</string>
    <string name="powder">باودر</string>
    <string name="fruit">فواكه(حمضيات)</string>
    <string name="leather">جلود</string>
    <string name="musk">مسك</string>
    <string name="sweet">فواكه(سويت)</string>
    <string name="fragrant_plant">أعشاب عطرية</string>
    <string name="flowers">أزهار</string>
    <string name="select_all_family">اختيار الكل</string>
    <string name="update_search">تحديث النتائج</string>
    <string name="size">الحجم: امل</string>
    <string name="concentrations">التركيز</string>
    <string name="night_">مسائي</string>
    <string name="morning_">صباحي</string>
    <string name="price_700">700 ريال</string>
    <string name="perfume_story">قصة العطر</string>
    <string name="perfume_notes">مكونات العطر</string>
    <string name="share">مشاركة</string>
    <string name="add_to_fav">إضفة المفضلة</string>
    <string name="similar_protect">منتجات أخرى مشابهة</string>
    <string name="add_to_cart">اضفة للسلة</string>
    <string name="product">المنتج</string>
    <string name="quantity_cont">لكمية</string>
    <string name="price_">السعر</string>
    <string name="total">اﻹجمالي</string>
    <string name="shipping_free">تكاليف الشحن</string>
    <string name="free">مجانا!</string>
    <string name="code">رمز التخفيض</string>
    <string name="total_">اﻹجمالي النهائي</string>
    <string name="confirm_order">اعتماد الطلب</string>
    <string name="have_acc">لدي حساب</string>
    <string name="email_login">البريد اﻹلكتروني</string>
    <string name="password_login">كلمة المرور</string>
    <string name="login">تسجيل الدخول</string>
    <string name="forgot_password">نسيت كلمة المرور؟</string>
    <string name="or">أو</string>
    <string name="new_acc">مستخدم جديد</string>
    <string name="procced">اﻻستمرار</string>
    <string name="full_name">اﻻسم الثنائي</string>
    <string name="phone_1">رقم الجوال</string>
    <string name="phone_2">رقم جوال آخر</string>
    <string name="loc">حدد موقعك</string>
    <string name="address">أدخل العنوان</string>
    <string name="delivery_opt">بيانات التوصيل</string>
    <string name="payment_method">وسيلة الدفع</string>
    <string name="arabic_text">إنشاء الحساب</string>
    <string name="review_order">مراجعة الطلب</string>
    <string name="credit_card">بطاقة ائتمانية</string>
    <string name="bank_transfer">حوالة بنكية</string>
    <string name="inside_riadh">لدفع عند اﻻستﻻم</string>
    <string name="scad_acc">حساب سداد</string>
    <string name="final_step">خطوة أخيرة</string>
    <string name="finish_order">إتمام عملية الشراء</string>
    <string name="check_email">تمت عملية الشراء بنجاح!</string>
    <string name="back_home">العودة للصفحة الرئيسية</string>
    <string name="delivery_details">بيانات التوصيل</string>
   <string name="gift_reciver">اسم المستلم</string>
    <string name="reciver_phone_no">رقم جوال المستلم</string>
    <string name="reciver_no_2">رقم جوال اخر للمستلم</string>
    <string name="reciver_mail">البريد اﻹلكتروني للمستلم</string>
    <string name="redeem">المبلغ</string>
    <string name="msg">الرسالة</string>
    <string name="clarification">أتفهم أن قيمة قسيمة الهدية غير مستردة</string>
    <string name="finish">إتمام عملية الشراء</string>
    <string name="happy_to_help">يقوم هزا اﻻختبار بمساعدتك قي اختيار العطر اﻷنسب لك</string>
    <string name="like_perfume">قي اختيار العطر اﻷنسب لك</string>
    <string name="wher_using_perfume">ماهي طبيعة استخدام العطر؟</string>
    <string name="which_perfume_family_like">ماهي العوائل العطرية المرغوبة؟</string>
    <string name="show_result">عرض النتائج</string>
    <string name="citrus">فواكه (حمضيات)</string>
    <string name="results">النتائج</string>
    <string name="order_history">سجل الطلبات</string>
    <string name="favourite_list">قائمة العطور المفضلة</string>
    <string name="personal_info">البيانات الشخصية</string>
    <string name="delivery_details_">بيانات التوصيل</string>
    <string name="city">المدينة</string>
    <string name="nighbor">الحي</string>
    <string name="street_name">العنوان</string>
    <string name="change_info">تعديل البيانات</string>
    <string name="change_password">تغيير كلمة المرور</string>
    <string name="confirm_pass">تاكيد كلمة المرور</string>
    <string name="terms_condition">أوافق على بنود اﻻستخدام وسياسة الخصوصية</string>
    <string name="our_story">نحكي لك قصة كل عطر بكل شغف!</string>
    <string name="read_more">تفاصيل أكثر</string>
    <string name="branches">فروعنا</string>
    <string name="contact_">نموزج اﻻتصال</string>
    <string name="name">اﻻسم</string>
    <string name="for_back_press">For Back Press</string>
    <string name="register">إنشاء حساب</string>
    <string name="log_in">تسجيل الدخول</string>
    <string name="log_out">تسجيل الخروج</string>
    <string name="create_acc">إنشاء حساب</string>
    <string name="price_concade">ريا</string>


</resources>
