<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e3b559">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e3b559"
        android:orientation="vertical"
        tools:context="lodore.com.lodore.Fragment.NavigationDrawerFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_margin="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.97"
                android:paddingEnd="10dp"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:id="@+id/nav_home"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:paddingRight="10dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_home_black_24dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.97"
                android:paddingEnd="10dp"
                android:layout_height="wrap_content"
                android:text="@string/perfumes"
                android:id="@+id/nav_perfume"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:paddingRight="10dp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/perfume_img"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.97"
                android:paddingEnd="10dp"
                android:layout_height="wrap_content"
                android:text="@string/fragnance_familes"
                android:id="@+id/nav_fragnance_familes"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:paddingRight="10dp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/contact_us"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.97"
                android:paddingEnd="10dp"
                android:layout_height="wrap_content"
                android:text="@string/my_about_us"
                android:id="@+id/nav_about_us"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:paddingRight="10dp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/about_us"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.97"
                android:paddingEnd="10dp"
                android:layout_height="wrap_content"
                android:text="@string/my_account"
                android:id="@+id/nav_my_account"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:paddingRight="10dp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/my_account"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.97"
                android:gravity="end"
                android:paddingEnd="10dp"
                android:layout_height="wrap_content"
                android:text="Login"
                android:id="@+id/nav_login"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:paddingRight="10dp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_keyboard_backspace_black_24dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_margin="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nav_blog"
                android:text="@string/blog"
                android:textSize="18dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nav_send_gift"
                android:text="@string/send_gift"
                android:textSize="18dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nav_shippinganddelivery"
                android:text="@string/shippinganddelivery"
                android:textSize="18dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nav_faq"
                android:text="@string/faq"
                android:textSize="18dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nav_privacy_policy"
                android:text="@string/privacy_policy"
                android:textSize="18dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nav_contact_us"
                android:text="@string/contact_us"
                android:textSize="18dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"/>
    -->
        </LinearLayout>

    </LinearLayout>
</ScrollView>