<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/toolbar_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|right"
                android:text="إنهاء الطلب"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="24dp"
        tools:context="lodore.com.lodore.CheckOutActivity">


        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="80dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/have_acc"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_size" />

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:padding="15dp"
                    android:background="@drawable/btn_backround_home"
                    android:cursorVisible="false"
                    android:drawablePadding="20dp"
                    android:drawableRight="@drawable/ic_email_black_24px"
                    android:hint="@string/email_login" />

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="15dp"
                    android:background="@drawable/btn_backround_home"
                    android:cursorVisible="false"
                    android:drawablePadding="20dp"
                    android:drawableRight="@drawable/ic_lock_black_24px"
                    android:hint="@string/password_login" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:padding="15dp"
                    android:background="@drawable/btn_cart_background"
                    android:text="@string/login"
                    android:textColor="@color/btn_primary_color" />

                <TextView
                    android:id="@+id/new_acc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/forgot_password"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp" />

                <include layout="@layout/design_or_checkout0" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center_horizontal"
                    android:text="@string/new_acc"
                    android:textColor="@color/primary_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center_horizontal"
                    android:text="بإمكانك متابعة عملية الشراء"
                    android:textAlignment="center"
                    android:textColor="@color/primary_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="وإنشاء حسابك لاحقاً"
                    android:textAlignment="center"
                    android:textColor="@color/primary_text" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnCheckOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/btn_cart_background"
            android:text="@string/procced"
            android:textColor="@color/btn_primary_color" />

    </RelativeLayout>
</LinearLayout>